@@ -2,7 +2,7 @@
  * examples/buttons/main.c
  *
  *   Copyright (C) 2011 Gregory Nutt. All rights reserved.
- *   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
+ *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -421,6 +421,10 @@ int MAIN_NAME(int argc, char *argv[])
     }
   lib_lowprintf("maxbuttons: %d\n", maxbuttons);
 #endif
+
+  /* Initialize the button GPIOs */
+
+  up_buttoninit();
 
   /* Register to recieve button interrupts */
 
